--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:6.17.1
+image: markadams/chromium-xvfb
 
 stages:
   - linting
@@ -15,6 +15,8 @@ cache:
 before_script:
   - apt-get clean
   - apt-get update
+  - curl -sL https://deb.nodesource.com/setup_6.x | bash -
+  - apt-get install -y nodejs git
   - npm -v
   - node -v
   - npm install --silent
@@ -25,6 +27,7 @@ lint:
     - npm run lint
   
 test:
+  image: markadams/chromium-xvfb
   stage: testing
   script:
     - npm test
