--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "angular2-template-loader": "0.6.2",
     "assets-webpack-plugin": "3.5.1",
     "awesome-typescript-loader": "3.2.3",
-    "codecov": "^3.0.0",
+    "codecov": "~3.7.0",
     "codelyzer": "3.2.0",
     "copy-webpack-plugin": "4.1.0",
     "cross-env": "5.0.5",
