--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
       "es2018",
       "dom"
     ],
-    "types": [
-      "node"
+    "typeRoots": [
+      "node_modules/@types"
     ]
   }
 }
