--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "parse-link-header": "^1.0.1",
     "protobufjs": "^6.10.1",
     "rxjs": "~6.6.0",
+    "swagger-ui-dist": "^3.38.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
