--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@stripe/stripe-js": "^1.20.3",
     "auth0-js": "^9.14.0",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ngx-infinite-scroll": "^9.1.0",
     "ngx-markdown": "^10.1.1",
+    "ngx-stripe": "^12.7.0",
     "parse-link-header": "^1.0.1",
     "protobufjs": "^6.10.1",
     "rxjs": "~6.6.0",
