--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
