--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "build": "ng build",
     "build:prod": "ng build --prod",
     "build:staging": "ng build --configuration=staging",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "ng test"
   },
   "dependencies": {
     "@angular/animations": "~13.3.11",
@@ -20,42 +18,41 @@
     "@angular/common": "~13.3.11",
     "@angular/compiler": "~13.3.11",
     "@angular/core": "~13.3.11",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.11",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "@stripe/stripe-js": "^1.20.3",
     "auth0-js": "^9.14.0",
     "file-saver": "^2.0.2",
-    "ngx-infinite-scroll": "^9.1.0",
-    "parse-link-header": "^1.0.1",
+    "ngx-infinite-scroll": "^10.0.0",
+    "ngx-markdown": "^13.1.0",
+    "ngx-stripe": "^13.2.1",
+    "parse-link-header": "^2.0.0",
     "protobufjs": "^6.10.1",
     "rxjs": "~6.6.0",
-    "swagger-ui-dist": "^3.38.0",
-    "tslib": "^2.0.0",
+    "swagger-ui-dist": "^4.12.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
+    "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.11",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "~3.10.0",
     "@types/node": "^12.19.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~4.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-verbose-reporter": "0.0.6",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.6.4"
   },
   "repository": {
@@ -64,5 +61,9 @@
   },
   "bugs": {
     "url": "https://github.com/gazebo-web/gazebosim-frontend/issues"
+  },
+  "engines": {
+    "node": "^16.0.0",
+    "npm": "^8.0.0"
   }
 }
