Cleanup and usage of new dependencies

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --prod",
-    "build:staging": "ng build --configuration=staging",
+    "build:prod": "ng build --configuration production",
+    "build:staging": "ng build --configuration staging",
     "test": "ng test"
   },
   "dependencies": {
@@ -26,12 +26,12 @@
     "@angular/router": "~13.3.11",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@stripe/stripe-js": "^1.20.3",
+    "@web3-storage/parse-link-header": "^3.1.0",
     "auth0-js": "^9.14.0",
     "file-saver": "^2.0.2",
     "ngx-infinite-scroll": "^10.0.0",
     "ngx-markdown": "^13.1.0",
     "ngx-stripe": "^13.2.1",
-    "parse-link-header": "^2.0.0",
     "protobufjs": "^6.10.1",
     "rxjs": "~6.6.0",
     "swagger-ui-dist": "^4.12.0",
