--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "build:staging": "ng build --configuration staging",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "dependencies": {
     "@angular/animations": "~13.3.11",
@@ -41,10 +42,21 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "~13.3.8",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.11",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.19.3",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
