--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,14 @@
             ]
           },
           "configurations": {
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -57,14 +65,7 @@
                 "input": "src/index.prod.html",
                 "output": "index.html"
               },
-              "aot": true,
-              "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": []
             },
             "staging": {
@@ -74,17 +75,11 @@
                   "with": "src/environments/environment.staging.ts"
                 }
               ],
-              "aot": true,
-              "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": []
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
@@ -93,10 +88,14 @@
             "port": 3000
           },
           "configurations": {
+            "development": {
+              "browserTarget": "app:build:development"
+            },
             "production": {
               "browserTarget": "app:build:production"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -116,7 +115,7 @@
             "karmaConfig": "karma.conf.js",
             "codeCoverage": true,
             "assets": [
-              "src/favicon.ico",
+              "src/assets/icon/favicon.ico",
               "src/assets"
             ],
             "styles": [
@@ -133,18 +132,6 @@
               "src/**/*.ts",
               "src/**/*.html"
             ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "app:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "app:serve:production"
-            }
           }
         }
       }
