--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "auth0-js": "^9.14.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "gzweb": "^2.0.12-beta.29",
     "ngx-infinite-scroll": "^9.1.0",
     "ngx-markdown": "^14.0.1",
     "ngx-stripe": "^14.1.0",
