--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@foxglove/sql.js": "^0.0.4",
     "@stripe/stripe-js": "^1.35.0",
+    "@types/emscripten": "^1.39.6",
     "@web3-storage/parse-link-header": "^3.1.0",
     "auth0-js": "^9.14.0",
+    "crypto-browserify": "^3.12.0",
+    "emscripten": "^0.0.2-beta",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "gzweb": "^2.0.12-beta.29",
     "ngx-infinite-scroll": "^9.1.0",
     "ngx-markdown": "^14.0.1",
     "ngx-stripe": "^14.1.0",
+    "path": "^0.12.7",
     "protobufjs": "^6.10.1",
     "rxjs": "~7.5.0",
+    "stream": "^0.0.2",
     "swagger-ui-dist": "^4.14.0",
     "swiper": "^8.3.2",
     "tslib": "^2.3.0",
@@ -53,5 +59,10 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "^4.4.2"
+  },
+  "browser": {
+    "crypto": false,
+    "fs": false,
+    "path": false
   }
 }
