Update to gzweb2 (#16)
* Use gzweb2 from npm

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* fix button

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Added script to update fuel model uri

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Fix deployment

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Update package.json

Signed-off-by: Nate Koenig <natekoenig@gmail.com>

* Upgrade to angular 14 (#8)

* angular 10 to 11

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* package updates

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* ngx-markdown 14

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Migrated to angular14

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Ignore .angular directory

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Added swiper

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Fix font size

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* cleanup

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Added missing files

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Removed font-awesome

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* changes

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Alphabetize

Signed-off-by: Nate Koenig <nate@openrobotics.org>

* Restore icons

* Gallery Component

* Use Gallery Component in Models and Worlds

* Hide thumbnails if there's just one image

* nit: remove console log

* Remove swiper stylesheet from src

* Remove NgxGalleryModule from tests

* Remove Infinite Scroll from tests

* Remove Portal and Logfiles

* Remove Infinite Scroll Dependency

* Add pagination to GET List of Fuel Resources

* Use pagination in Fuel Resource List

* Paginator in the Fuel Resource List Component

* Pagination in Models and Worlds

* Scroll on Navigation - Upgrade

* Fix Collection Dialog

* Paginated collections on Service

* Use new 

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,12 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm install
 
       - name: Build
-        run: npm run build:prod
+        run: npm run build:staging
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -57,7 +57,7 @@ jobs:
           aws-region: "us-east-1"
 
       - name: Upload package to S3 bucket
-        run: aws s3 sync dist/app s3://${{ secrets.S3_BUCKET }}
+        run: aws s3 sync dist s3://${{ secrets.S3_BUCKET }}
 
       - name: Invalidate Cloudfront
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
@@ -92,7 +92,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm install
 
@@ -107,7 +107,7 @@ jobs:
           aws-region: "us-east-1"
 
       - name: Upload package to S3 bucket
-        run: aws s3 sync dist/app s3://${{ secrets.S3_BUCKET }}
+        run: aws s3 sync dist s3://${{ secrets.S3_BUCKET }}
 
       - name: Invalidate Cloudfront
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
